{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 36,
  "lineage": "12df53b1-1a51-befa-870e-f7d0b1892ea6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f568d4c2f00ac18d",
            "arn": "arn:aws:ec2:us-east-1:374307543075:elastic-ip/eipalloc-0f568d4c2f00ac18d",
            "association_id": "eipassoc-04f88b4889c48f7aa",
            "domain": "vpc",
            "id": "eipalloc-0f568d4c2f00ac18d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02d5349653810551b",
            "private_dns": "ip-10-0-1-164.ec2.internal",
            "private_ip": "10.0.1.164",
            "public_dns": "ec2-54-167-140-71.compute-1.amazonaws.com",
            "public_ip": "54.167.140.71",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prefect-ecs"
            },
            "tags_all": {
              "Name": "prefect-ecs"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374307543075:internet-gateway/igw-0e84e7493726a00e2",
            "id": "igw-0e84e7493726a00e2",
            "owner_id": "374307543075",
            "tags": {
              "Name": "prefect-ecs"
            },
            "tags_all": {
              "Name": "prefect-ecs"
            },
            "vpc_id": "vpc-055c091dfaafa7327"
          },
          "dependencies": [
            "aws_vpc.prefect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f568d4c2f00ac18d",
            "association_id": "eipassoc-04f88b4889c48f7aa",
            "connectivity_type": "public",
            "id": "nat-047f32fb2413dee0e",
            "network_interface_id": "eni-02d5349653810551b",
            "private_ip": "10.0.1.164",
            "public_ip": "54.167.140.71",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-070081b419c829042",
            "tags": {
              "Name": "prefect-ecs"
            },
            "tags_all": {
              "Name": "prefect-ecs"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.prefect_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374307543075:route-table/rtb-07e2e93daf5ea0c57",
            "id": "rtb-07e2e93daf5ea0c57",
            "owner_id": "374307543075",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-047f32fb2413dee0e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prefect-ecs-private"
            },
            "tags_all": {
              "Name": "prefect-ecs-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-055c091dfaafa7327"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.prefect_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374307543075:route-table/rtb-06202194a3e9fc2a4",
            "id": "rtb-06202194a3e9fc2a4",
            "owner_id": "374307543075",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e84e7493726a00e2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prefect-ecs-public"
            },
            "tags_all": {
              "Name": "prefect-ecs-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-055c091dfaafa7327"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.prefect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e0396247d282b58",
            "route_table_id": "rtb-07e2e93daf5ea0c57",
            "subnet_id": "subnet-041a3f1945c9fee56"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.prefect_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062e8c9ebcefcfc42",
            "route_table_id": "rtb-07e2e93daf5ea0c57",
            "subnet_id": "subnet-002d29df6dc6b8366"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.prefect_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce34dfdb4caf6a25",
            "route_table_id": "rtb-07e2e93daf5ea0c57",
            "subnet_id": "subnet-072d5371f9333301c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.prefect_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04800663ff55e2eb5",
            "route_table_id": "rtb-06202194a3e9fc2a4",
            "subnet_id": "subnet-070081b419c829042"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.prefect_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5a4aab0d680c147",
            "route_table_id": "rtb-06202194a3e9fc2a4",
            "subnet_id": "subnet-03dc4e1f69bcde6b6"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.prefect_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8810ceec85b91c0",
            "route_table_id": "rtb-06202194a3e9fc2a4",
            "subnet_id": "subnet-0d406454bdece9220"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.prefect_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374307543075:security-group/sg-0275ed54b591a2697",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0275ed54b591a2697",
            "ingress": [],
            "name": "prefect-ecs-service-sg",
            "name_prefix": "",
            "owner_id": "374307543075",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prefect-ecs"
            },
            "tags_all": {
              "Name": "prefect-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-055c091dfaafa7327"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prefect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374307543075:subnet/subnet-041a3f1945c9fee56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041a3f1945c9fee56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374307543075",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs-private-1"
            },
            "tags_all": {
              "Name": "prefect-ecs-private-1"
            },
            "vpc_id": "vpc-055c091dfaafa7327"
          },
          "dependencies": [
            "aws_vpc.prefect_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374307543075:subnet/subnet-002d29df6dc6b8366",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002d29df6dc6b8366",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374307543075",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs-private-2"
            },
            "tags_all": {
              "Name": "prefect-ecs-private-2"
            },
            "vpc_id": "vpc-055c091dfaafa7327"
          },
          "dependencies": [
            "aws_vpc.prefect_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374307543075:subnet/subnet-072d5371f9333301c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072d5371f9333301c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374307543075",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs-private-3"
            },
            "tags_all": {
              "Name": "prefect-ecs-private-3"
            },
            "vpc_id": "vpc-055c091dfaafa7327"
          },
          "dependencies": [
            "aws_vpc.prefect_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374307543075:subnet/subnet-070081b419c829042",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070081b419c829042",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374307543075",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs-public-1"
            },
            "tags_all": {
              "Name": "prefect-ecs-public-1"
            },
            "vpc_id": "vpc-055c091dfaafa7327"
          },
          "dependencies": [
            "aws_vpc.prefect_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374307543075:subnet/subnet-03dc4e1f69bcde6b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03dc4e1f69bcde6b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374307543075",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs-public-2"
            },
            "tags_all": {
              "Name": "prefect-ecs-public-2"
            },
            "vpc_id": "vpc-055c091dfaafa7327"
          },
          "dependencies": [
            "aws_vpc.prefect_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374307543075:subnet/subnet-0d406454bdece9220",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d406454bdece9220",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374307543075",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs-public-3"
            },
            "tags_all": {
              "Name": "prefect-ecs-public-3"
            },
            "vpc_id": "vpc-055c091dfaafa7327"
          },
          "dependencies": [
            "aws_vpc.prefect_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prefect_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374307543075:vpc/vpc-055c091dfaafa7327",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-033dc7848d893dc80",
            "default_route_table_id": "rtb-035d886b0c293e18f",
            "default_security_group_id": "sg-031fa6bc6d15cb54e",
            "dhcp_options_id": "dopt-09fe599b341ca2a1d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-055c091dfaafa7327",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-035d886b0c293e18f",
            "owner_id": "374307543075",
            "tags": {
              "Name": "prefect-ecs"
            },
            "tags_all": {
              "Name": "prefect-ecs"
            }
          }
        }
      ]
    }
  ]
}